add GetRequestCtx helper
